DMX Read and Wite operation.
